<resources>
    <string name="age">Age</string>
    <string name="app_name">Insurance Premium Calculator</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="smoker">Smoker?</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="insurance_premium">Insurance Premium : </string>
    <string name="yes">Yes</string>
</resources>